create register dto
